--- a/alphabetbase.html
+++ b/alphabetbase.html
@@ -59,6 +59,9 @@
   </div>
   
   <script>
+    // 弹出警告信息
+    alert("⚠️ 在使用节点时不要 DDOS，不要发送垃圾邮件！");
+
     // 预留的接口：请求服务器接口获取 ping 值
     async function getPing(ip) {
       try {
@@ -91,7 +94,7 @@
           port: "19188",
           protocol: "tcp",
           country: "法国",
-          speed: 800,
+          speed: 1000,
           downloadContent: "vless://22a54b72-9c39-4bb0-97d0-41bbaaca2a67@163.172.122.94:19188?encryption=none&flow=xtls-rprx-vision&security=reality&sni=www.yahoo.com&fp=chrome&pbk=tVDaWxsy54q7yRNRdJ718Gyt2HDoh_3R2y_PX22hhjM&sid=95c93be9&type=tcp&headerType=none"
         }
       ];
