--- a/alphabetbase.html
+++ b/alphabetbase.html
@@ -51,7 +51,7 @@
 <body>
   <div class="container">
     <!-- 返回按钮 -->
-    <button class="back-button" onclick="goBack()">返回</button>
+    <button class="back-button" onclick="https://fishqaq123.github.io/tuijian/indexnew.html">返回</button>
     <h2>节点列表</h2>
     
     <!-- 节点信息显示区 -->
