--- a/alphabetbase.html
+++ b/alphabetbase.html
@@ -58,7 +58,7 @@
 <body>
   <div class="container">
     <!-- 返回按钮 -->
-    <button class="back-button" onclick="window.location.href='https://fishqaq123.github.io/tuijian/indexnew.html'">返回</button>
+    <button class="back-button" onclick="window.location.href='https://fishqaq123.github.io/tuijian/index.html'">返回</button>
     <h2>节点列表</h2>
 
     <!-- 搜索框 -->
