--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         </div>
         <div class="download-links">
             <h3>Android 下载</h3>
-            <a href="https://ghproxy.net/https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Android-arm64.apk" target="_blank">镜像下载 APK</a>
-            <a href="https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Android-arm64.apk" target="_blank">GitHub 下载</a>
+            <a href="https://ghproxy.net/https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Android-arm64.apk">镜像下载 APK</a>
+            <a href="https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Android-arm64.apk">GitHub 下载</a>
             <h3>Windows 下载</h3>
-            <a href="https://ghproxy.net/https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Windows-Setup-x64.exe" target="_blank">镜像下载 Windows</a>
-            <a href="https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Windows-Setup-x64.exe" target="_blank">GitHub 下载</a>
+            <a href="https://ghproxy.net/https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Windows-Setup-x64.exe">镜像下载 Windows</a>
+            <a href="https://github.com/hiddify/hiddify-app/releases/download/v2.5.7/Hiddify-Windows-Setup-x64.exe">GitHub 下载</a>
             <h3>GitHub 项目</h3>
-            <a href="https://github.com/hiddify" target="_blank">访问 GitHub 项目网站</a>
+            <a href="https://github.com/hiddify">访问 GitHub 项目网站</a>
         </div>
     </div>
 
     <!-- 右下角的下载链接，点击后跳转到指定页面 -->
     <div class="download-file">
-        <a href="https://fishqaq123.github.io/tuijian/alphabetbase.html" target="_blank">点击下载节点文件</a>
+        <a href="https://fishqaq123.github.io/tuijian/alphabetbase.html">点击下载节点文件</a>
     </div>
 
 </body>
